Compiler Bouw/compiler/test/basic/stephen/fail/not_bool_if.cvc
#include "civic.h"

export int main() {
    if (5) {
        printInt(1);
    }
    return 0;
}
